--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,maximum-scale=1">
     <meta http-equiv="content-language" content="id">
-    <link rel="canonical" href="https://betlazada03.com">
-    <title>SUMBERBET – Platform Slot & Togel Terbaik dan Terpercaya 2025</title>
+    <link rel="canonical" href="https://sumberbet41.com">
+    <title>SSumberbet – Situs Slot & Togel Online Terlengkap dan Terpercaya</title>
     <meta name="description" content="SUMBERBET adalah platform permainan online yang menyediakan layanan slot populer dan togel terpercaya dengan pilihan provider lengkap, fitur modern, serta tingkat kemenangan tinggi di tahun 2025.">
     <meta name="robots" content="index, follow, max-image-preview:large" />
     <meta name="page-locale" content="id,en">
     <meta content="true" name="HandheldFriendly">
     <meta content="width" name="MobileOptimized">
-    <meta property="og:title" content="SUMBERBET – Platform Slot & Togel Terbaik dan Terpercaya 2025">
+    <meta property="og:title" content="Sumberbet – Situs Slot & Togel Online Terlengkap dan Terpercaya">
     <meta property="og:description" content="SUMBERBET adalah platform permainan online yang menyediakan layanan slot populer dan togel terpercaya dengan pilihan provider lengkap, fitur modern, serta tingkat kemenangan tinggi di tahun 2025.">
     <meta property="og:url" content="SUMBERBET">
     <meta property="og:site_name" content="SUMBERBET">
@@ -498,13 +498,13 @@
                     <a href="https://sumberbet41.com">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-wa.png" width="20px"></button>
                     </a>
-                    <a href="https://betlazada03.com/#/index">
+                    <a href="https://sumberbet41.com/">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-pesan.png" width="20px"></button>
                     </a>
-                    <a href="https://betlazada03.com/#/index">
+                    <a href="https://sumberbet41.com/">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-beranda.png" width="20px"></button>
                     </a>
-                    <a href="https://betlazada03.com/#/index">
+                    <a href="https://sumberbet41.com/">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-login.png" width="20px"></button>
                     </a>
                 </div>
@@ -529,8 +529,8 @@
                             </div>
                         </button>
                     </a>
-                    <a href="https://betlazada03.com/#/register" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR</a>
-                    <a href="https://betlazada03.com" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN</a>
+                    <a href="https://sumberbet41.com/register" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR</a>
+                    <a href="https://sumberbet41.com" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN</a>
                 </div>
             </div> 
             <div class="artikel">
@@ -544,4 +544,5 @@
         </div>
     </main>
 </body>
+
 </html>
