--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width,maximum-scale=1">
     <meta http-equiv="content-language" content="id">
     <link rel="canonical" href="https://sumberbet41.com">
-    <title>Sumberbet – Situs Slot & Togel Online Terlengkap dan Terpercaya</title>
+    <title>SUMBERBET – Platform Slot & Togel Terbaik dan Terpercaya 2025</title>
     <meta name="description" content="SUMBERBET adalah platform permainan online yang menyediakan layanan slot populer dan togel terpercaya dengan pilihan provider lengkap, fitur modern, serta tingkat kemenangan tinggi di tahun 2025.">
     <meta name="robots" content="index, follow, max-image-preview:large" />
     <meta name="page-locale" content="id,en">
     <meta content="true" name="HandheldFriendly">
     <meta content="width" name="MobileOptimized">
-    <meta property="og:title" content="Sumberbet – Situs Slot & Togel Online Terlengkap dan Terpercaya">
+    <meta property="og:title" content="SUMBERBET – Platform Slot & Togel Terbaik dan Terpercaya 2025">
     <meta property="og:description" content="SUMBERBET adalah platform permainan online yang menyediakan layanan slot populer dan togel terpercaya dengan pilihan provider lengkap, fitur modern, serta tingkat kemenangan tinggi di tahun 2025.">
     <meta property="og:url" content="SUMBERBET">
     <meta property="og:site_name" content="SUMBERBET">
     <meta property="og:author" content="SUMBERBET">
-    <meta property="og:image" content="https://sumberbet41.com/images/favicon.png">
+    <meta property="og:image" content="https://sumberbet.store/image/sumber.jpg">
     <meta name="og:locale" content="ID_id">
     <meta name="og:type" content="website">
     <meta name="rating" content="general">
@@ -27,7 +27,7 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="https://sumberbet41.com/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://sumberbet.store/image/logo.png" type="image/x-icon">
     <style amp-boilerplate>
         body {
             -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -498,13 +498,13 @@
                     <a href="https://sumberbet41.com">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-wa.png" width="20px"></button>
                     </a>
-                    <a href="https://sumberbet41.com/">
+                    <a href="https://sumberbet41.com">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-pesan.png" width="20px"></button>
                     </a>
-                    <a href="https://sumberbet41.com/">
+                    <a href="https://sumberbet41.com">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-beranda.png" width="20px"></button>
                     </a>
-                    <a href="https://sumberbet41.com/">
+                    <a href="https://sumberbet41.com">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-login.png" width="20px"></button>
                     </a>
                 </div>
@@ -544,6 +544,4 @@
         </div>
     </main>
 </body>
-
 </html>
-
