--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,maximum-scale=1">
     <meta http-equiv="content-language" content="id">
-    <link rel="canonical" href="https://sumberbet41.com">
+    <link rel="canonical" href="https://sumberbet.xyz">
     <title>SUMBERBET – Platform Slot & Togel Terbaik dan Terpercaya 2025</title>
     <meta name="description" content="SUMBERBET adalah platform permainan online yang menyediakan layanan slot populer dan togel terpercaya dengan pilihan provider lengkap, fitur modern, serta tingkat kemenangan tinggi di tahun 2025.">
     <meta name="robots" content="index, follow, max-image-preview:large" />
@@ -495,30 +495,30 @@
         <div class="macallan">
             <div class="slot-gacor">
                 <div class="slotthailand-container block1">
-                    <a href="https://sumberbet41.com">
+                    <a href="https://sumberbet.xyz">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-wa.png" width="20px"></button>
                     </a>
-                    <a href="https://sumberbet41.com">
+                    <a href="https://sumberbet.xyz">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-pesan.png" width="20px"></button>
                     </a>
-                    <a href="https://sumberbet41.com">
+                    <a href="https://sumberbet.xyz">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-beranda.png" width="20px"></button>
                     </a>
-                    <a href="https://sumberbet41.com">
+                    <a href="https://sumberbet.xyz">
                         <button class="tototogel"><img src="https://sumberbet.store/image/icon-login.png" width="20px"></button>
                     </a>
                 </div>
                 <br>
 
                 <div class="block-img">
-                    <a href="https://sumberbet41.com" target="_blank" rel="noopener noreferrer nofollow">
+                    <a href="https://sumberbet.xyz" target="_blank" rel="noopener noreferrer nofollow">
                         <amp-img height="1000" width="1000" layout="responsive" alt="SUMBERBET" src="https://sumberbet.store/image/sumber.jpg"></amp-img>
                     </a>
                 </div>
 
                 <div class="slotthailand">
                     <a href="slotthailand-container block1">
-                    <a href="https://sumberbet41.com" target="_blank" rel="noopener noreferrer nofollow">
+                    <a href="https://sumberbet.xyz" target="_blank" rel="noopener noreferrer nofollow">
                         <button class="btn2"><strong>SUMBERBET</strong>
                             <div id="container-stars">
                                 <div id="stars"></div>
@@ -529,8 +529,8 @@
                             </div>
                         </button>
                     </a>
-                    <a href="https://sumberbet41.com/register" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR</a>
-                    <a href="https://sumberbet41.com" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN</a>
+                    <a href="https://sumberbet.xyz/?ref=mcqueen95" target="_blank" rel="noopener noreferrer nofollow" class="block">DAFTAR</a>
+                    <a href="https://sumberbet.xyz/?ref=mcqueen95" target="_blank" rel="noopener noreferrer nofollow" class="block">LOGIN</a>
                 </div>
             </div> 
             <div class="artikel">
@@ -545,3 +545,4 @@
     </main>
 </body>
 </html>
+
