--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="SUMBERBET">
     <meta property="og:site_name" content="SUMBERBET">
     <meta property="og:author" content="SUMBERBET">
-    <meta property="og:image" content="https://sumberbet.store/image/sumber.jpg">
+    <meta property="og:image" content="https://sumberbet.xyz/images/upload-MobileSlides-20251119160956.jpg">
     <meta name="og:locale" content="ID_id">
     <meta name="og:type" content="website">
     <meta name="rating" content="general">
@@ -26,7 +26,7 @@
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="https://sumberbet.store/image/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://sumberbet.xyz/images/upload-MobileSlides-20251119160956.jpg" type="image/x-icon">
     <style amp-boilerplate>
         body {
             -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
@@ -544,5 +544,6 @@
     </main>
 </body>
 </html>
+
 
 
