--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
                 <div class="block-img">
                     <a href="https://sumberbet.xyz" target="_blank" rel="noopener noreferrer nofollow">
-                        <amp-img height="1000" width="1000" layout="responsive" alt="SUMBERBET" src="https://sumberbet.store/image/sumber.jpg"></amp-img>
+                        <amp-img height="1000" width="1000" layout="responsive" alt="SUMBERBET" src="https://sumberbet.xyz/images/upload-MobileSlides-20251119160956.jpg"></amp-img>
                     </a>
                 </div>
 
@@ -544,6 +544,7 @@
     </main>
 </body>
 </html>
+
 
 
 
