--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,maximum-scale=1">
     <meta http-equiv="content-language" content="id">
-    <link rel="canonical" href="https://sumberbet.xyz">
+    <link rel="canonical" href="https://sumberbet.online">
     <title>SUMBERBET – Platform Slot & Togel Terbaik dan Terpercaya 2025</title>
     <meta name="description" content="SUMBERBET adalah platform permainan online yang menyediakan layanan slot populer dan togel terpercaya dengan pilihan provider lengkap, fitur modern, serta tingkat kemenangan tinggi di tahun 2025.">
     <meta name="robots" content="index, follow, max-image-preview:large" />
@@ -544,6 +544,7 @@
     </main>
 </body>
 </html>
+
 
 
 
