--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                             <div class="card-description">
                                 
                             </div>
-                            <a target="_blank" rel="nofollow noreferrer noopener" title="SUMBERBET login" href="https://qurl.bio/r/SUMBERBET-login" class="card-cta-button">
+                            <a target="_blank" rel="nofollow noreferrer noopener" title="SUMBERBET login" href="https://sumberbet.site/?ref=mcqueen95" class="card-cta-button">
                                 SUMBERBET LOGIN
                             </a>
-                            <a target="_blank" rel="nofollow noreferrer noopener" title="SUMBERBET daftar" href="https://qurl.bio/r/SUMBERBET-daftar" class="card-cta-button">
+                            <a target="_blank" rel="nofollow noreferrer noopener" title="SUMBERBET daftar" href="https://sumberbet.site/?ref=mcqueen95" class="card-cta-button">
                                 SUMBERBET DAFTAR
                             </a>
                             <a target="_blank" rel="nofollow noreferrer noopener" title="SUMBERBET livechat" href="https://qurl.bio/r/SUMBERBET-livechat" class="card-cta-button">
