--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <meta name="googlebot" content="index, follow">
     <meta property="og:locale" content="id_ID">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="SUMBERBET – Platform Slot & Togel Terbaik dan Terpercaya 2025">
+    <meta property="og:title" content="Sumberbet – Situs Slot & Togel Online Terlengkap dan Terpercaya">
     <meta property="og:description" content="Sumberbet adalah situs slot dan togel online terpercaya dengan permainan lengkap, RTP tinggi, proses cepat, dan dukungan 24 jam. Daftar mudah & klaim bonus terbaru.">
     <meta property="og:url" content="https://amp-sumberbet.pages.dev/">
-    <meta property="og:image" content="https://sumberbet.online/images/upload-MobileSlides-20251119161834.png">
+    <meta property="og:image" content="https://betlazada02.site/images/sumberbet.web">
     <link rel="canonical" href="https://sumberbet.online/">
     <link rel="icon" href="https://demigod-assets.sgp1.cdn.digitaloceanspaces.com/lpassets/SUMBERBET/favicon.webp" sizes="any">
     <link rel="icon" href="https://demigod-assets.sgp1.cdn.digitaloceanspaces.com/lpassets/SUMBERBET/favicon.webp" type="image/svg+xml">
@@ -101,3 +101,4 @@
     </div>
 </body>
 </html>
+
