--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Sumberbet – Situs Slot & Togel Online Terlengkap dan Terpercaya">
     <meta property="og:description" content="Sumberbet adalah situs slot dan togel online terpercaya dengan permainan lengkap, RTP tinggi, proses cepat, dan dukungan 24 jam. Daftar mudah & klaim bonus terbaru.">
     <meta property="og:url" content="https://amp-sumberbet.pages.dev/">
-    <meta property="og:image" content="https://betlazada02.site/images/sumberbet.web">
+    <meta property="og:image" content="https://betlazada02.site/images/sumberbet.webp">
     <link rel="canonical" href="https://sumberbet.online/">
     <link rel="icon" href="https://demigod-assets.sgp1.cdn.digitaloceanspaces.com/lpassets/SUMBERBET/favicon.webp" sizes="any">
     <link rel="icon" href="https://demigod-assets.sgp1.cdn.digitaloceanspaces.com/lpassets/SUMBERBET/favicon.webp" type="image/svg+xml">
@@ -91,7 +91,7 @@
             </div>
             <div class="card-face-back">
                 <amp-img 
-                    src="https://betlazada02.site/images/sumberbet.webp" 
+                    src="https://betlazada02.site/images/cardback.webp" 
                     alt="SUMBERBET – Platform Slot & Togel Terbaik dan Terpercaya 2025"
                     layout="fill"
                     object-fit="cover"> 
@@ -101,4 +101,5 @@
     </div>
 </body>
 </html>
+
 
