--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="card-image-box">
                             <div class="card-image-placeholder">
                                 <amp-img
-                                    src="https://res.cloudinary.com/discdcwu9/image/upload/v1765612058/SUMBERBET_o02kuz.webp"
+                                    src="https://betlazada02.site/images/sumberbet.webp"
                                     alt="SUMBERBET – Platform Slot & Togel Terbaik dan Terpercaya 2025"
                                     layout="responsive" 
                                     width="800"  
@@ -101,6 +101,7 @@
     </div>
 </body>
 </html>
+
 
 
 
