--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html amp lang="id">
+<html ⚡ lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
@@ -101,6 +101,7 @@
     </div>
 </body>
 </html>
+
 
 
 
