--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Sumberbet adalah situs slot dan togel online terpercaya dengan permainan lengkap, RTP tinggi, proses cepat, dan dukungan 24 jam. Daftar mudah & klaim bonus terbaru.">
     <meta property="og:url" content="https://amp-sumberbet.pages.dev/">
     <meta property="og:image" content="https://betlazada02.site/images/sumberbet.webp">
-    <link rel="canonical" href="https://sumberbet.online/">
+    <link rel="canonical" href="https://sumberbet41.org/">
     <link rel="icon" href="https://demigod-assets.sgp1.cdn.digitaloceanspaces.com/lpassets/SUMBERBET/favicon.webp" sizes="any">
     <link rel="icon" href="https://demigod-assets.sgp1.cdn.digitaloceanspaces.com/lpassets/SUMBERBET/favicon.webp" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://demigod-assets.sgp1.cdn.digitaloceanspaces.com/lpassets/SUMBERBET/favicon.webp">
@@ -101,6 +101,7 @@
     </div>
 </body>
 </html>
+
 
 
 
