--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Sumberbet adalah situs slot dan togel online terpercaya dengan permainan lengkap, RTP tinggi, proses cepat, dan dukungan 24 jam. Daftar mudah & klaim bonus terbaru.">
     <meta property="og:url" content="https://amp-sumberbet.pages.dev/">
     <meta property="og:image" content="https://betlazada02.site/images/sumberbet.webp">
-    <link rel="canonical" href="https://sumberbet41.org/">
+    <link rel="canonical" href="https://sumberbet41.online/">
     <link rel="icon" href="https://demigod-assets.sgp1.cdn.digitaloceanspaces.com/lpassets/SUMBERBET/favicon.webp" sizes="any">
     <link rel="icon" href="https://demigod-assets.sgp1.cdn.digitaloceanspaces.com/lpassets/SUMBERBET/favicon.webp" type="image/svg+xml">
     <link rel="apple-touch-icon" href="https://demigod-assets.sgp1.cdn.digitaloceanspaces.com/lpassets/SUMBERBET/favicon.webp">
@@ -72,10 +72,10 @@
                             <div class="card-description">
                                 
                             </div>
-                            <a target="_blank" rel="nofollow noreferrer noopener" title="SUMBERBET login" href="https://sumberbet.site/?ref=mcqueen95" class="card-cta-button">
+                            <a target="_blank" rel="nofollow noreferrer noopener" title="SUMBERBET login" href="https://sumberbet41.online/?ref=mcqueen95" class="card-cta-button">
                                 SUMBERBET LOGIN
                             </a>
-                            <a target="_blank" rel="nofollow noreferrer noopener" title="SUMBERBET daftar" href="https://sumberbet.site/?ref=mcqueen95" class="card-cta-button">
+                            <a target="_blank" rel="nofollow noreferrer noopener" title="SUMBERBET daftar" href="https://sumberbet41.online/?ref=mcqueen95" class="card-cta-button">
                                 SUMBERBET DAFTAR
                             </a>
                             <a target="_blank" rel="nofollow noreferrer noopener" title="SUMBERBET livechat" href="https://qurl.bio/r/SUMBERBET-livechat" class="card-cta-button">
@@ -101,6 +101,7 @@
     </div>
 </body>
 </html>
+
 
 
 
